--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src="./Images/Home.png" width="100%" height="100%">
+            <img class="bd-placeholder-img card-img-top" src="./Images/Home.png" width="100%" height="200px">
             <div class="card-body">
 
               <p class="card-text">
