--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src="./Images/Home.png" width="100%" height="200px">
+            <a href="https://to-do-list-2wbi.onrender.com/home" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/Home.png" width="100%" height="200px"></a>
             <div class="card-body">
 
               <p class="card-text">
@@ -160,7 +160,7 @@
         </div>
         <div class="col ">
           <div class="card shadow-sm ">
-            <img class="bd-placeholder-img card-img-top" src="./Images/santim_crypto.png" width="100%" height="200px">
+            <a href="https://santim-cryptocurrency.onrender.com/" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/santim_crypto.png" width="100%" height="200px"></a>
             <div class="card-body">
               <p class="card-text">
                 <h5>Cryptocurrency Website</h5>
@@ -190,8 +190,8 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <img class="bd-placeholder-img card-img-top" src="./Images/LegoWeb_img.png" width="100%" height="200px">
-            <div class="card-body">
+            <a href="https://github.com/AbelWondimul/Lego-Website" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/LegoWeb_img.png" width="100%" height="200px">
+            <div class="card-body"></a>
               <p class="card-text">
                 <h5>Lego Website</h5>
                 <h6>I used:</h6>
