--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
   <div class="text-bg-dark collapse" id="navbarHeader" >
     <div class="container">
       <div class="row">
-        <div class="col-sm-8 col-md-7 py-4">          
+        <div class="col-sm-8 col-md-7 py-4">    
+          <a href="https://drive.google.com/file/d/1LGVbLEKUBiD72QgAeEHIxGtXI6wb1wm7/view?usp=sharing" target="_blank" class="btn btn-sm btn-outline-secondary">My Resume</a>  
         </div>
         <div class="col-sm-4 offset-md-1 py-4">
           <h4>Contact</h4>
@@ -160,7 +161,7 @@
         </div>
         <div class="col ">
           <div class="card shadow-sm ">
-            <a href="https://santim-cryptocurrency.onrender.com/" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/santim_crypto.png" width="100%" height="200px"></a>
+            <a href="https://santim-cryptocurrency.onrender.com/" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/santim_crypto.png" width="100%" height="180px"></a>
             <div class="card-body">
               <p class="card-text">
                 <h5>Cryptocurrency Website</h5>
@@ -190,7 +191,7 @@
         </div>
         <div class="col">
           <div class="card shadow-sm">
-            <a href="https://github.com/AbelWondimul/Lego-Website" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/LegoWeb_img.png" width="100%" height="200px">
+            <a href="https://github.com/AbelWondimul/Lego-Website" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/LegoWeb_img.png" width="100%" height="180px">
             <div class="card-body"></a>
               <p class="card-text">
                 <h5>Lego Website</h5>
