--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/docker/docker-original.svg" height="40" alt="docker logo"  />
         <img width="12" />
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" height="40" alt="postgresql logo"  />
+        <img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
+                      <img width="12"/>
       <br>
       <br>
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" height="40" alt="vscode logo"  />
@@ -215,6 +217,48 @@
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" onclick=" window.open('https://github.com/AbelWondimul/Lego-Website')" class="btn btn-sm btn-outline-secondary">View Code</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <a href="https://github.com/AbelWondimul/FlashCards.git" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/Lab_2.gif" width="100%" height="180px">
+            <div class="card-body"></a>
+              <p class="card-text">
+                <h5>Flash Card</h5>
+                <h6>I used:</h6>
+                <ul class="bx">
+                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
+                      <img width="12"/></li>
+                </ul>
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                    <!-- <button type="button" onclick=" window.open('https://santim-cryptocurrency.onrender.com/')" class="btn btn-sm btn-outline-secondary">View Website</button> -->
+                    <button type="button" onclick=" window.open('https://github.com/AbelWondimul/FlashCards.git')" class="btn btn-sm btn-outline-secondary">View Code</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <a href="https://github.com/AbelWondimul/Cat-Website" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/Lab_3.gif" width="100%" height="180px">
+            <div class="card-body"></a>
+              <p class="card-text">
+                <h5>Cat Website</h5>
+                <h6>I used:</h6>
+                <ul class="bx">
+                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
+                      <img width="12"/></li>
+                </ul>
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                    <!-- <button type="button" onclick=" window.open('https://santim-cryptocurrency.onrender.com/')" class="btn btn-sm btn-outline-secondary">View Website</button> -->
+                    <button type="button" onclick=" window.open('https://github.com/AbelWondimul/Cat-Website')" class="btn btn-sm btn-outline-secondary">View Code</button>
                 </div>
               </div>
             </div>
