--- a/index.html
+++ b/index.html
@@ -264,6 +264,27 @@
             </div>
           </div>
         </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <a href="https://github.com/AbelWondimul/Data_Dashboard_1" target="_blank"><img class="bd-placeholder-img card-img-top" src="./Images/Lab_5.gif" width="100%" height="180px">
+            <div class="card-body"></a>
+              <p class="card-text">
+                <h5>Weather Data</h5>
+                <h6>I used:</h6>
+                <ul class="bx">
+                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
+                      <img width="12"/></li>
+                </ul>
+              </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                    <!-- <button type="button" onclick=" window.open('https://santim-cryptocurrency.onrender.com/')" class="btn btn-sm btn-outline-secondary">View Website</button> -->
+                    <button type="button" onclick=" window.open('https://github.com/AbelWondimul/Data_Dashboard_1')" class="btn btn-sm btn-outline-secondary">View Code</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
