--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" height="40" alt="postgresql logo"  />
         <img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
                       <img width="12"/>
+        <img src="./Images/supabase-logo-DCC676FFE2-seeklogo.com.png" height="40" alt="Supabase logo"  />
+                        <img width="12"/>
       <br>
       <br>
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vscode/vscode-original.svg" height="40" alt="vscode logo"  />
@@ -230,9 +232,9 @@
                 <h5>CrewMate</h5>
                 <h6>I used:</h6>
                 <ul class="bx">
-                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
+                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="react logo"  />
                       <img width="12"/></li>
-                      <li><img src="./Images/supabase-logo-DCC676FFE2-seeklogo.com.png" height="40" alt="postgresql logo"  />
+                      <li><img src="./Images/supabase-logo-DCC676FFE2-seeklogo.com.png" height="40" alt="Supabase logo"  />
                         <img width="12"/></li>
                 </ul>
               </p>
@@ -253,7 +255,7 @@
                 <h5>Flash Card</h5>
                 <h6>I used:</h6>
                 <ul class="bx">
-                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
+                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="react logo"  />
                       <img width="12"/></li>
                 </ul>
               </p>
@@ -274,9 +276,9 @@
                 <h5>Cat Website</h5>
                 <h6>I used:</h6>
                 <ul class="bx">
-                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
+                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="react logo"  />
                       <img width="12"/></li>
-                  <li><img src="./Images/API.png" height="40" alt="postgresql logo"  />
+                  <li><img src="./Images/API.png" height="40" alt="API logo"  />
                         <img width="12"/></li>
                 </ul>
               </p>
@@ -297,9 +299,9 @@
                 <h5>Weather Data</h5>
                 <h6>I used:</h6>
                 <ul class="bx">
-                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="postgresql logo"  />
+                  <li><img src="https://raw.githubusercontent.com/devicons/devicon/v2.15.1/icons/react/react-original.svg" height="40" alt="react logo"  />
                       <img width="12"/></li>
-                  <li><img src="./Images/API.png" height="40" alt="postgresql logo"  />
+                  <li><img src="./Images/API.png" height="40" alt="API logo"  />
                         <img width="12"/></li>
                 </ul>
               </p>
