Update student information in index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="row py-lg-5">
       <div class="col-lg-6 col-md-8 mx-auto">
         <h1 class="fw-light"><image class="img" src="./Images/linkPropic.png" alt="Profile pic"></image></h1>
-        <p class="lead text-body-secondary">Hi there, I am Abel Legesse. I am a sophomore studying Computer Science at Pacific Lutheran University. I have a background in HTML, CSS, JAVA, JAVASCRIPT, PYTHON, and SQL, and I am bilingual. I have excellent problem-solving abilities, and great time-management skills, and I am eager to learn new things every day. </p>
+        <p class="lead text-body-secondary">Hi there, I am Abel Legesse. I am a Junior studying Computer Science at Pacific Lutheran University. I have a background in HTML, CSS, JAVA, JAVASCRIPT, PYTHON, and SQL. I have excellent problem-solving abilities, and great time-management skills, and I am eager to learn new things every day. </p>
         <p>
           <a href="https://github.com/AbelWondimul" class="btn btn-secondary my-2"target="_blank"><img class="btnlogo" src="./Images/githublogo.png" alt="github logo" > Github</a>
           <a href="https://www.linkedin.com/in/abel-legesse-445669231/" class="btn btn-primary my-2" target="_blank"><img class="btnlogo" src="./Images/linkedinlogo.png" alt="linkedin logo">Linkedin</a>
